<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".ui.fragments.PrivacyPolicyFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageview_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/guideline47"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@+id/guideline105"
        app:layout_constraintTop_toTopOf="@+id/guideline40"
        app:srcCompat="@drawable/ic_arrow_back" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/header_text_view_24sp"
        android:text="@string/our_policies"
        android:textColor="@color/dodger_blue_light_2"
        app:layout_constraintBottom_toTopOf="@+id/guideline224"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline105"
        app:layout_constraintTop_toTopOf="@+id/guideline214" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/header_text_3"
        android:layout_marginStart="@dimen/dp_4"
        android:text="@string/privacy_policy"
        app:layout_constraintBottom_toTopOf="@+id/guideline107"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageview_back"
        app:layout_constraintTop_toTopOf="@+id/guideline106" />

    <ScrollView
        style="@style/w_0_h_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline226"
        app:layout_constraintStart_toStartOf="@+id/guideline105"
        app:layout_constraintTop_toTopOf="@+id/guideline225">

        <com.google.android.material.textview.MaterialTextView
            style="@style/w_m_h_m"
            android:textColor="?attr/attr_lblack_dwhite_80_80"
            android:text="@string/privacy_policy_text" />
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline105"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline226"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.025" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.075" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline106"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.035" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline107"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.065" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline214"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline224"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.147" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline225"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

</androidx.constraintlayout.widget.ConstraintLayout>