<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="browserVM"
            type="com.example.casttotv.viewmodel.BrowserViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lens"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:text="Hide toolbar"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageView15"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_hide_toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:button="@null"
                android:checked='@{browserVM.getPrefs("BEHAVIOR_UI_HIDE_TOOLBAR",false)}'
                android:onClick='@{()->browserVM.putPrefs("BEHAVIOR_UI_HIDE_TOOLBAR",!browserVM.getPrefs("BEHAVIOR_UI_HIDE_TOOLBAR",false))}'
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:text="@string/hide_toolbar_body"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageView15"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lens"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:text="First toolbar"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageView22"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_first_toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:button="@null"
                android:checked='@{browserVM.getPrefs("BEHAVIOR_UI_FIRST_TOOLBAR",false)}'
                android:onClick='@{()->browserVM.putPrefs("BEHAVIOR_UI_FIRST_TOOLBAR",!browserVM.getPrefs("BEHAVIOR_UI_FIRST_TOOLBAR",false))}'
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:text="@string/first_toolbar_body"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageView22"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lens"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:text="Position"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageView23"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_position"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:button="@null"
                android:checked='@{browserVM.getPrefs("BEHAVIOR_UI_POSITION",false)}'
                android:onClick='@{()->browserVM.putPrefs("BEHAVIOR_UI_POSITION",!browserVM.getPrefs("BEHAVIOR_UI_POSITION",false))}'
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:text="@string/position_body"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageView23"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView6" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>